--- a/apps/auction_web/lib/auction_web/templates/page/index.html.eex
+++ b/apps/auction_web/lib/auction_web/templates/page/index.html.eex
@@ -5,6 +5,19 @@
 
 <section class="row">
   <article class="column">
+    <h2>Items</h2>
+    <ul>
+    <%= for item <- @items do %>
+      <li>
+        <strong><%= item.title %></strong>: <%= item.description %>
+      </li>
+    <% end %>
+    </ul>
+  </article>
+</section>
+
+<section class="row">
+  <article class="column">
     <h2>Resources</h2>
     <ul>
       <li>
