--- a/apps/auction_web/lib/auction_web/templates/user/show.html.eex
+++ b/apps/auction_web/lib/auction_web/templates/user/show.html.eex
@@ -12,11 +12,11 @@
 
 <%= for bid <- @bids do %>
   <p>
-    <strong><%= bid.inserted_at %></strong>
+    <strong><%= formatted_datetime(bid.inserted_at) %></strong>
     --
     <%= integer_to_currency(bid.amount) %>
     for
-    <em><%= link bid.item.title, to: Routes.item_path(@conn, :show, bid.item)</em>
+    <em><%= link bid.item.title, to: Routes.item_path(@conn, :show, bid.item) %></em>
   </p>
 <% end %>
 
